RESOLVED FIXED215199
Netflix.com shows a scrubber that doesn't work
https://bugs.webkit.org/show_bug.cgi?id=215199
Summary Netflix.com shows a scrubber that doesn't work
Peng Liu
Reported 2020-08-05 16:10:16 PDT
Netflix.com shows a scrubber that doesn't work
Attachments
Patch (1.91 KB, patch)
2020-08-05 17:35 PDT, Peng Liu
no flags
Peng Liu
Comment 1 2020-08-05 16:11:09 PDT
Peng Liu
Comment 2 2020-08-05 17:35:43 PDT
EWS
Comment 3 2020-08-05 19:35:31 PDT
Committed r265318: <https://trac.webkit.org/changeset/265318> All reviewed patches have been landed. Closing bug and clearing flags on attachment 406060 [details].
Note You need to log in before you can comment on or make changes to this bug.