Cherry-pick r265318. rdar://problem/66630841

Netflix.com shows a scrubber that doesn't work
    https://bugs.webkit.org/show_bug.cgi?id=215199

    Reviewed by Eric Carlson.

    The "contentDuration" property of WebPlaybackControlsManager needs to be infinite
    when the video is not seekable. Otherwise, AVKit will show a scrubber that doesn't
    work on the Touch Bar.

    * platform/mac/WebPlaybackControlsManager.mm:
    (-[WebPlaybackControlsManager contentDuration]):
    (-[WebPlaybackControlsManager setContentDuration:]):

    Canonical link: https://commits.webkit.org/227998@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@265318 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/227865.6@safari-610.1.25-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-610.1.25-branch@265331 268f45cc-cd09-0410-ab3c-d52691b4dbfc